--- a/style2.css
+++ b/style2.css
@@ -20,31 +20,63 @@ button, a {
  
 
 /*Menu*/
-.Menucontenedor{
+.navbar {
     display: flex;
-    justify-content: space-around;
+    position: relative;
+    justify-content: space-between;
     align-items: center;
-    background-color: rgba(17, 17, 16, 0);
-    padding: 0px 0px;
-    width: 100%;
+    background-color: #fff;
+    color: rgb(14, 13, 13);
     border-bottom:solid #E3B70B 3px;
-    
-}   
+  }
+  .brand-title {
+    font-size: 1.5rem;
+    margin: 0.5rem;
 
-.Menucontenedor li{
-    
-    text-align: center;
-    width: 20%;
-    
-}
-.Menucontenedor li a{
-    color: #000000;
-    font-weight: bold;
+  }
+  #navbar-links {
+    height: 100%;
+  }
+  #navbar-links ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+  #navbar-links li {
+    list-style: none;
+    transition: background-color 2s ease;
+  }
+  #navbar-links li a {
+    display: block;
     text-decoration: none;
+    color: #000000;
+    padding: 1rem;
+  }
+  #navbar-links li:hover {
+    background-color: rgba(219, 185, 72, 0.658);
+  }
+  .toggle-button {
+    position: absolute;
+    top: 0.75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+  }
+  .toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #000000;
+    border-radius: 10px;
+  }
+  #navbar-links:target {
+    display: flex;
+  }
+  
+ /*home*/
 
-}
-
-/*home*/
 .FPresentacion{
     display: flex;
     justify-content: space-between;
@@ -172,7 +204,11 @@ button a{
     
     /*para mobile solo saca margin y padding*/
 }
-
+.maps{
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+}
 
 /*footer*/
 footer{
@@ -197,3 +233,39 @@ font-weight: bold;
 footer img{
     width: 5vh;
 }
+
+@media (max-width: 600px) {
+    .navbar {
+      flex-direction: column;     
+      align-items: flex-start;
+    }
+    .toggle-button {
+      display: flex;
+      border-top: 200px;
+    }
+    #navbar-links {
+      display: none;
+      width: 100%;
+    }
+    #navbar-links ul {
+      width: 100%;
+      flex-direction: column;
+    }
+    #navbar-links ul li {
+      text-align: center;
+    }
+    #navbar-links ul li a {
+      padding: 0.5rem 1rem;
+    }
+    .contenedor__article{
+        width: 100%;
+    }
+    .Contactform{
+        margin: 1rem;
+        padding: 0;
+        background-color: #e6c12e17  ;
+    }
+    .footermobile{
+       display: none; 
+        }
+  }
