--- a/style2.css
+++ b/style2.css
@@ -15,10 +15,25 @@ button, a {
     width: 100;
     text-align: center;
     padding: 30px;
-
+} /*
+.tituloSeccionCama h2{ 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: 900;
+  color: #fff;
 }
- 
-
+.tituloSeccionSala h2{ 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: 900;
+}
+.tituloSeccionComedor h2{ 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: 900;
+}*/
+/*
+body{
+  background: url("imagenes/bgheader.jpg");
+} 
+*/
 /*Menu*/
 .navbar {
     display: flex;
@@ -27,7 +42,8 @@ button, a {
     align-items: center;
     background-color: #fff;
     color: rgb(14, 13, 13);
-    border-bottom:solid #E3B70B 3px;
+    border-bottom:solid #E3B70B 20px;
+    background: url("imagenes/bgheader.jpg");
   }
   .brand-title {
     font-size: 1.5rem;
@@ -44,11 +60,14 @@ button, a {
   }
   #navbar-links li {
     list-style: none;
+    border-radius: 25%;
     transition: background-color 2s ease;
   }
   #navbar-links li a {
     display: block;
     text-decoration: none;
+    font-weight: none;
+    font-size: 1.5rem;
     color: #000000;
     padding: 1rem;
   }
@@ -139,7 +158,7 @@ button a{
     flex-grow: unset;
     justify-content: center;
     align-items: center;
-    background-image: url("/imagenes/Cama/principalCama.png");
+    background-image: url("imagenes/cama/principalCama.png");
     background-position: center;
     height: 30vh;
     
@@ -150,7 +169,7 @@ button a{
     flex-grow: unset;
     justify-content: center;
     align-items: center;
-    background-image: url("/imagenes/Sala/principalSala.jpg");
+    background-image: url("imagenes/sala/principalSala.jpg");
     background-position: center;
     height: 30vh;
     
@@ -161,7 +180,7 @@ button a{
     flex-grow: unset;
     justify-content: center;
     align-items: center;
-    background-image: url("/imagenes/Comedor/comedorPrincilal.jpg");
+    background-image: url("imagenes/comedor/comedorPrincilal.jpg");
     background-position: center;
     height: 30vh;
     
@@ -213,8 +232,9 @@ button a{
 /*footer*/
 footer{
     text-decoration: none;
-    border-top:solid #E3B70B 3px;
-    padding: 20px;
+    border-top:solid #E3B70B 20px;
+    padding: 10px 0 0 0;
+    background: url("imagenes/bgheader.jpg");
 }
 footer h3{
     display: flex;
@@ -222,7 +242,7 @@ footer h3{
 }
 footer ul{
     
-    padding:2%;
+    padding:10px;
     display: flex;
     justify-content: space-between;
 }
