--- a/style2.css
+++ b/style2.css
@@ -42,7 +42,7 @@ body{
     align-items: center;
     background-color: rgb(100, 54, 54);
     color: #fff;;
-    border-bottom:solid #E3B70B 20px;
+    border-bottom:solid #E3B70B 3px;
     background: url("imagenes/bgheader.jpg");
   }
   .brand-title {
@@ -101,15 +101,13 @@ body{
     justify-content: space-between;
     align-items: flex-end;
     padding: 10% ; 
-    margin: 0px;
-
-    
+    margin: 0px 20px;  
 }
 .FPresentacion h2{
     font-size: 40px;
 }
 .FPresentacion div :hover{
-    transform: scale(1.08);
+    transform: scale(1.04);
 }
 /*Comedores modelo general*/
 
@@ -175,8 +173,8 @@ button a{
     justify-content: center;
     align-items: center;
     background-image: url("imagenes/sala/principalSala.jpg");
-    background-position: center;
-    height: 30vh;
+    background-position:center;
+      height: 30vh;
     
 }
 .tituloSeccionComedor{
@@ -203,25 +201,132 @@ button a{
     border-style: solid ;
     margin: 5px 5px 5px 5px ;
     }
-.modalcama1__colores--color1{
-    background-color: rgb(44, 32, 29);
+.modalcama1__colores--color1, .modalcama3__colores--color1{
+  background-image: url(/imagenes/cama/ANDROMEDAAZUL.jpg);
 }
 
-.modalcama1__colores--color2{
-    background-color: rgb(24, 128, 128);
+.modalcama1__colores--color2, .modalcama3__colores--color2{
+  background-image: url(/imagenes/cama/ANDROMEDANEGRO.jpg);
 }
 
-.modalcama1__colores--color3{
-    background-color: rgb(38, 36, 168);
+.modalcama1__colores--color3, .modalcama3__colores--color3{
+  background-image: url(/imagenes/cama/ANDROMEDAGRIS.jpg);
 }
-.modalcama1__colores--color4{
-    background-color: rgb(20, 177, 177);
+.modalcama1__colores--color4, .modalcama3__colores--color4{
+  background-image: url(/imagenes/cama/ANDROMEDACAFE.jpg);
 }
 
+/*Modal Comerdor*/
+.modalComedor1__colores--color1{
+  background-image: url(imagenes/comedor/FLORMORADO.jpg);
+}
+.modalComedor1__colores--color2{
+  background-image: url(imagenes/comedor/MIEL.jpg);
+}
+.modalComedor1__colores--color3{
+  background-image: url(imagenes/comedor/WENGUE.jpg);
+}
+.modalComedor1__colores--color4{
+  background-image: url(imagenes/comedor/CARAMELO.jpg);
+}
 
+/*Modal Salas*/
+.modalSala1__colores--color1{
+  background-image: url(imagenes/sala/telasflorencia/saraGris.jpg);
+}
 
+.modalSala1__colores--color2{
+  background-image: url(imagenes/sala/telasflorencia/saraMarfil.jpg);
+}
 
-/* retoque formulario*/
+.modalSala1__colores--color3{
+  background-image: url(imagenes/sala/telasflorencia/saraPlata.jpg);
+}
+
+.modalSala1__colores--color4{
+  background-image: url(imagenes/sala/telasflorencia/saraVerde.jpg);
+}
+/*Lisboa*/
+.modalSala2__colores--color1{
+  background-image: url(imagenes/sala/telasLisboa/gabrielaAzul.jpg);
+}
+
+.modalSala2__colores--color2 {
+  background-image: url(imagenes/sala/telasLisboa/gabrielaGris.jpg);
+}
+
+.modalSala2__colores--color3{
+  background-image: url(imagenes/sala/telasLisboa/gabrielaMostaza.jpg);
+}
+
+.modalSala2__colores--color4{
+  background-image: url(imagenes/sala/telasLisboa/gabrielaVerde.jpg);
+}
+/*multifuncional*/
+.modalSala3__colores--color1{
+  background-image: url(imagenes/sala/telasMultifincional/KABULPETROLEO.jpg);
+}
+
+.modalSala3__colores--color2 {
+  background-image: url(imagenes/sala/telasMultifincional/KABULARENA.jpg);
+}
+
+.modalSala3__colores--color3{
+  background-image: url(imagenes/sala/telasMultifincional/KABULCAPUCHINO.jpg);
+}
+
+.modalSala3__colores--color4{
+  background-image: url(imagenes/sala/telasMultifincional/KABULNAVY.jpg);
+}
+/*NapolyJunior*/
+.modalSala4__colores--color1{
+  background-image: url(imagenes/sala/telasNapolyJunior/BAVAROBEIGUE.jpg);
+}
+
+.modalSala4__colores--color2 {
+  background-image: url(imagenes/sala/telasNapolyJunior/BAVAROPLATA.jpg);
+}
+
+.modalSala4__colores--color3{
+  background-image: url(imagenes/sala/telasNapolyJunior/BAVAROTAUPE.jpg);
+}
+
+.modalSala4__colores--color4{
+  background-image: url(imagenes/sala/telasNapolyJunior/BAVAROTURQUEZA.jpg);
+}
+/*Orion*/
+.modalSala5__colores--color1{
+  background-image: url(imagenes/sala/telasOrion/BAVAROBEIGUE.jpg);
+}
+
+.modalSala5__colores--color2 {
+  background-image: url(imagenes/sala/telasOrion/BAVAROPLATA.jpg);
+}
+
+.modalSala5__colores--color3{
+  background-image: url(imagenes/sala/telasOrion/BAVAROTAUPE.jpg);
+}
+
+.modalSala5__colores--color4{
+  background-image: url(imagenes/sala/telasOrion/BAVAROTURQUEZA.jpg);
+}
+/*SALA U*/
+.modalSala6__colores--color1{
+  background-image: url(imagenes/sala/telasu/KATARAZUL.jpg);
+}
+
+.modalSala6__colores--color2 {
+  background-image: url(imagenes/sala/telasu/KATARGRIS.jpg);
+}
+
+.modalSala6__colores--color3{
+  background-image: url(imagenes/sala/telasu/KATARROSA.jpg);
+}
+
+.modalSala6__colores--color4{
+  background-image: url(imagenes/sala/telasu/KATARMARFIL.jpg);
+}
+/*RETOQUE FORMULARIO*/
 .Contactform{
     margin: 10vh 20vh;
     padding: 10vh;
@@ -238,7 +343,7 @@ button a{
 /*footer*/
 footer{
     text-decoration: none;
-    border-top:solid #E3B70B 20px;
+    border-top:solid #E3B70B 3px;
     padding: 10px 0 0 0;
     background: url("imagenes/bgheader.jpg");
 }
