--- a/sass/_generalprod.scss
+++ b/sass/_generalprod.scss
@@ -22,8 +22,8 @@ article img{
     filter: none;
 }
 article img:hover {
-
-	filter: grayscale(1.2);
+    
+	filter:brightness(1.15);
 }
 
 /*Modal*/
