--- a/css/estilos.css
+++ b/css/estilos.css
@@ -389,7 +389,7 @@ button a {
 .toggle-button .bar {
   height: 3px;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 10px;
 }
 
