--- a/sass/_generalprod.scss
+++ b/sass/_generalprod.scss
@@ -35,11 +35,11 @@ button{
     
 }
 .botonmodal{
-  border-color: #fff;
+  border-color: $Blanco;
   padding: 15px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.459);
 }
 button a{
     font-weight: bold;
-    color: #fff;
+    color: $Blanco;
 }
