--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -18,7 +18,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(100, 54, 54);
-    color: #fff;;
+    color: $Blanco;
     border-bottom:solid $colorPrincipal 3px;
     background: url("/imagenes/bgheader.jpg");
   }
@@ -45,7 +45,7 @@
     text-decoration: none;
     font-weight: none;
     font-size: 1.5rem;
-    color: #fff;
+    color: $Blanco;
     padding: 1rem;
   }
   #navbar-links li:hover {
@@ -64,7 +64,7 @@
   .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: #ffffff;
+    background-color:$Blanco;
     border-radius: 10px;
   }
   #navbar-links:target {
@@ -81,7 +81,7 @@ footer{
 footer h3{
     display: flex;
     justify-content: center ;
-    color: #fff;
+    color: $Blanco;
 }
 footer ul{
     
@@ -90,7 +90,7 @@ footer ul{
     justify-content: space-between;
 }
 footer a{
-color:#fff;
+color: $Blanco;
 font-weight: bold;
 }
 footer img{
